--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
 </head>
 <body>
   <div class="buttonBox"> 
-    <a href="./" > <button class="button"></button></a>
-    <a href="./" > <button class="button"></button></a>
-    <a href="./" > <button class="button"></button></a>
-    <a href="./" > <button class="button"></button></a>
-    </div>
+    <a href="./API-Dog" > <button class="button">API Dog</button></a>
+    <a href="./javaColorBox" > <button class="button">java Color Box</button></a>
+    <a href="./javaTipsCalculator" > <button class="button">java Tips Calculator</button></a>
+    <a href="./rock-paper-scissors" > <button class="button">rock paper scissors</button></a>
+    <a href="./superHeroAPI" > <button class="button">super Hero API</button></a>
+
+  </div>
 
 </body>
 </html>
