--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <body>
   <div class="buttonBox"> 
     <a href="./API-Dog" > <button class="button">API Dog</button></a>
-    <a href="./javaColorBox" > <button class="button">java Color Box</button></a>
-    <a href="./javaTipsCalculator" > <button class="button">java Tips Calculator</button></a>
+    <a href=".Java Color Box" > <button class="button">java Color Box</button></a>
+    <a href="./java Tips Calculator" > <button class="button">java Tips Calculator</button></a>
     <a href="./rock-paper-scissors" > <button class="button">rock paper scissors</button></a>
-    <a href="./superHeroAPI" > <button class="button">super Hero API</button></a>
+   
 
   </div>
 
