Add weather button to main page

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
   <div class="buttonBox"> 
+    <a href="./APIweather" > <button class="button">API Weather</button></a>
     <a href="./API-Dog" > <button class="button">API Dog</button></a>
     <a href=".Java Color Box" > <button class="button">java Color Box</button></a>
     <a href="./java Tips Calculator" > <button class="button">java Tips Calculator</button></a>
