Change current temp
add °C to Javascript instead of span

--- a/APIweather/index.html
+++ b/APIweather/index.html
@@ -35,7 +35,7 @@
       >
 
       <div class="tempBoxTop">
-         <div id="temp"></div><div class="deg">&#8451;</div>
+         <div id="temp"></div>
       </div>
  </div>
 
