Change background colour
Add a internal border with LARGE pixel spread to cover
area

--- a/APIweather/index.html
+++ b/APIweather/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <img class="background" src="./weather_background.jpg" alt="rainscreen">
+    <!-- <img class="background" src="./weather_background.jpg" alt="rainscreen"> -->
    <div class="locatBox">
     <div id="town"></div>
     <div id="region"></div>
