--- a/galaxy/index.html
+++ b/galaxy/index.html
@@ -2,14 +2,164 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="./style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Galaxy Animation </title>
+    <title>Galaxy Animation</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+        }
+
+        html, body {
+            overflow: hidden;
+            cursor: none;
+        }
+
+        canvas.webgl {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100vw;
+            height: 100vh;
+            outline: none;
+        }
+    </style>
 </head>
 <body>
-    <canvas class="webgl">
-        
-    </canvas>
-    <script type="module" src="script.js"></script>
+    <canvas class="webgl"></canvas>
+
+    <script type="module">
+        import * as THREE from "https://cdn.skypack.dev/three@0.132.2";
+        import { OrbitControls } from "https://cdn.skypack.dev/three@0.132.2/examples/jsm/controls/OrbitControls.js";
+
+        // Canvas
+        const canvas = document.querySelector('canvas.webgl');
+
+        // Scene
+        const scene = new THREE.Scene();
+
+        // Galaxy parameters
+        const parameters = {
+            count: 100000,
+            size: 0.01,
+            radius: 2.5,
+            branches: 3,
+            spin: 3,
+            randomness: 0.5,
+            randomnessPower: 3,
+            insideColor: '#ff6030',
+            outsideColor: '#0949f0'
+        };
+
+        let material = null;
+        let geometry = null;
+        let points = null;
+
+        const generateGalaxy = () => {
+            if(points !== null){
+                geometry.dispose();
+                material.dispose();
+                scene.remove(points);
+            }
+
+            material = new THREE.PointsMaterial({
+                size: parameters.size,
+                sizeAttenuation: true,
+                depthWrite: false,
+                blending: THREE.AdditiveBlending,
+                vertexColors: true
+            });
+
+            geometry = new THREE.BufferGeometry();
+            const positions = new Float32Array(parameters.count * 3);
+            const colors = new Float32Array(parameters.count * 3);
+
+            const colorInside = new THREE.Color(parameters.insideColor);
+            const colorOutside = new THREE.Color(parameters.outsideColor);
+
+            for(let i = 0; i < parameters.count; i++){
+                const i3 = i * 3;
+
+                const radius = Math.random() * parameters.radius;
+                const spinAngle = radius * parameters.spin;
+                const branchAngle = ((i % parameters.branches) / parameters.branches) * Math.PI * 2;
+
+                const randomX = Math.pow(Math.random(), parameters.randomnessPower) * (Math.random() < 0.5 ? 1 : -1) * parameters.randomness;
+                const randomY = Math.pow(Math.random(), parameters.randomnessPower) * (Math.random() < 0.5 ? 1 : -1) * parameters.randomness;
+                const randomZ = Math.pow(Math.random(), parameters.randomnessPower) * (Math.random() < 0.5 ? 1 : -1) * parameters.randomness;
+
+                positions[i3] = Math.cos(branchAngle + spinAngle) * radius + randomX;
+                positions[i3+1] = randomY;
+                positions[i3+2] = Math.sin(branchAngle + spinAngle) * radius + randomZ;
+
+                const mixedColor = colorInside.clone();
+                mixedColor.lerp(colorOutside, Math.random() * radius / parameters.radius);
+
+                colors[i3] = mixedColor.r;
+                colors[i3+1] = mixedColor.g;
+                colors[i3+2] = mixedColor.b;
+            }
+
+            geometry.setAttribute('position', new THREE.BufferAttribute(positions, 3));
+            geometry.setAttribute('color', new THREE.BufferAttribute(colors, 3));
+
+            points = new THREE.Points(geometry, material);
+            scene.add(points);
+        };
+
+        generateGalaxy();
+
+        // Sizes
+        const sizes = {
+            width: window.innerWidth,
+            height: window.innerHeight
+        };
+
+        window.addEventListener('resize', () => {
+            sizes.width = window.innerWidth;
+            sizes.height = window.innerHeight;
+
+            camera.aspect = sizes.width / sizes.height;
+            camera.updateProjectionMatrix();
+
+            renderer.setSize(sizes.width, sizes.height);
+            renderer.setPixelRatio(Math.min(window.devicePixelRatio, 2));
+        });
+
+        // Camera
+        const camera = new THREE.PerspectiveCamera(75, sizes.width / sizes.height, 0.1, 100);
+        camera.position.set(5, 5, 5);
+        scene.add(camera);
+
+        // Controls
+        const controls = new OrbitControls(camera, canvas);
+        controls.enableDamping = true;
+
+        // Renderer
+        const renderer = new THREE.WebGLRenderer({
+            canvas: canvas
+        });
+        renderer.setSize(sizes.width, sizes.height);
+        renderer.setPixelRatio(Math.min(window.devicePixelRatio, 2));
+
+        // Animate
+        const clock = new THREE.Clock();
+
+        const tick = () => {
+            const elapsedTime = clock.getElapsedTime();
+
+            // Optional: rotate camera around galaxy
+            const radius = 6;
+            camera.position.x = Math.cos(elapsedTime * 0.05) * radius;
+            camera.position.z = Math.sin(elapsedTime * 0.05) * radius;
+            camera.lookAt(0, 0, 0);
+
+            controls.update();
+            renderer.render(scene, camera);
+            requestAnimationFrame(tick);
+        };
+
+        tick();
+    </script>
 </body>
 </html>
